Preventing mobile code overflow

--- a/src/assets/scss/_post.scss
+++ b/src/assets/scss/_post.scss
@@ -32,3 +32,7 @@
     margin-right: 10px;
   }
 }
+
+.blog-post code.language-text {
+  white-space: pre-line;
+}
